# chess-engine

./: .gitignore  Cargo.toml  ]  debug.py  debug.txt  equal_games.txt  output.txt  posParser.py  posParserEquals.py
src/: attack_tables.rs  board.rs  comm.rs  defs.rs  engine.rs  eval.rs  evaluation.rs  extra.rs  helper.rs  main  main.rs  move_gen.rs  movegen.rs  puzzle.rs  search.rs  ui.rs  zobrist.rs
src/board/: defs.rs  fen.rs  gamestate.rs  history.rs  makemove.rs  utils.rs  zobrist.rs
src/comm/: uci.rs
src/engine/: about.rs  comm_report.rs  defs.rs  search_report.rs  transposition.rs  utils.rs
src/evaluation/: defs.rs  material.rs  psqt.rs
src/extra/: bits.rs  cmdline.rs  magics.rs  parse.rs  print.rs
src/movegen/: create.rs  defs.rs  init.rs  magics.rs  movelist.rs
src/search/: alpha_beta.rs  bestmove.rs  defs.rs  helpers.rs  search_routine.rs  sorting.rs  time.rs  utils.rs
src/ui/: board.rs  config.rs  engine.rs  settings.rs  squares.rs  styling.rs  ui.rs
src/ui/styling/: container.rs  stacks.rs
