[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
rand_chacha = "0.3.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_core = "0.6.4"
crossbeam-channel = "0.5.6"
crossbeam-utils = "0.8.14"
clap = "4.1.6"
colored = "2.1.0"
tokio = { version = "1.27.0", features = ["process", "io-std", "io-util", "sync"] }
